--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="col-sm-3 col-md-3 col-lg-3 offset-lg-9">
   <form id="animal-form" role="form">
   <hr>
-    <h2>Giphy Fun</h2>
+    <h2>Giphy Fun Mother Fucker!!!!</h2>
     <div class="form-group">
       <label for="animal-input">Add an animal</label>
       <input type="text" id="animal-input">
