--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 
 <div class="container">
 <div class="col-sm-3 col-md-3 col-lg-3 offset-lg-9">
+  <br>
   <form id="animal-form" role="form">
   <hr>
     <h2>Giphy Fun Mother Fucker!!!!</h2>
     <div class="form-group">
-      <label for="animal-input">Add an animal</label>
+      <label for="animal-input">Add an category</label>
       <input type="text" id="animal-input">
     </div>
     <input id="addAnimal" type="submit" value="submit" class="btn btn-info">
