--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <hr>
     <h2>Giphy Fun Mother Fucker!!!!</h2>
     <div class="form-group">
-      <label for="animal-input">Add an category</label>
+      <label for="animal-input">Add a category</label>
       <input type="text" id="animal-input">
     </div>
     <input id="addAnimal" type="submit" value="submit" class="btn btn-info">
