--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <h2>Giphy Fun Mother Fucker!!!!</h2>
     <div class="form-group">
-      <label for="animal-input">Add a category</label>
+      <label for="animal-input">Add a category & click GIF to play</label>
       <input type="text" id="animal-input">
     </div>
     <input id="addAnimal" type="submit" value="submit" class="btn btn-info">
