--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <br>
   <form id="animal-form" role="form">
 
-    <h2>Giphy Fun Mother Fucker!!!!</h2>
+    <h2>Giphy Fun!!!</h2>
     <div class="form-group">
       <label for="animal-input">Add a category & click GIF to play</label>
       <input type="text" id="animal-input">
