--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="container">
-<div class="col-sm-3 col-md-3 col-lg-3 offset-lg-9">
+<div class="col-sm-3 col-md-3 col-lg-3 offset-lg-9 col-sm-12 col-xs-12">
   <br>
   <form id="animal-form" role="form">
 
@@ -27,7 +27,7 @@
     <input id="addAnimal" type="submit" value="submit" class="btn btn-info">
   </form>
 </div>
-  <div class="col-sm-9 col-md-9 col-lg-9">
+  <div class="col-sm-9 col-md-9 col-lg-9 col-sm-12 col-xs-12">
       <div id="gifsView"></div>
     </div>
 </div>
