--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
   <style>
+    
+    .gifDiv {
+      margin-top: 3em;
+}
     @media (max-width: 767px) {
 .container {
     width: 100% !important;
